--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ main {
 
 }
 
-/* .color{
+.color{
     background:red;
     position:absolute;
     top:0;
@@ -65,5 +65,5 @@ main {
     border: 1px #ccc solid;
     border-radius: 4px;
     padding: 0.3em;
-} */
+}
 
