--- a/main.css
+++ b/main.css
@@ -1,62 +1,131 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
+}
+
 body{
     padding: 0;
     margin: 0;
-    /* background: #ffffff; */
     font-family: 'Montserrat', sans-serif;
-    background-color: #64afc8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* gap: 2em; */
-    min-height: 100vh;
-    
-}
-
-
- main {
-    width: 85%;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    background-color: #11637e; 
-    color: white;
-    border: 0;
-    border-radius: 10px;
-    padding: 20px;
-  } 
-
-.tshirt{
-    position: relative;
-    border-radius: 3em;
     overflow: hidden;
 }
 
-.img-1{
-    width: 300px;
+
+main {
+    width: 80%;
+    padding-top: 30px;
+    /* padding: 10px 10px 40px 10px; */
+    margin: auto;
+    margin-top: 14px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    background-color: #ec5707; 
+    color: rgb(255, 255, 255);
+    border: 0;
+    border-radius: 10px;
+} 
+
+
+
+
+form{
+    text-align: center;
+}
+
+
+.radioItem {
+    padding-left: 13px;
+    display: flex;
+    margin: 5px;
+    
+}
+
+input[type="radio"] {
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fcc306;
+    margin:0;
+    color: white;
+    width: 14px;
+    height: 14px;
+    border: 2px solid currentColor;
+    border-radius: 50%;
+    transform: translateY(1px);
+    display: flex;
+    place-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+input[type="radio"]::before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    background-color: #ec5707;
+}
+
+input[type="radio"]:checked::before {
+    transform: scale(1);
+}
+
+
+input[type=text] {
+    border: 3px solid #fcc306;
+    border-radius: 3px;
+    background: none;
+    color: white;
+}
+
+button {
+    margin: 30px;
+    padding: 5px;
+    border: 4px solid #fcc306;
+    border-radius: 3px;
+    background: none;
+    color: white;
+    transition: ease-in-out 0.2s;
+}
+
+button:hover {
+    background: #fcc306;
+    cursor: pointer;
+}
+
+
+img{
+    position: absolute;
+    width: 70%;
+    transform: translateX(-136px);
+   
+}
+
+.img_wrap{
+    display: none;
+    width: 100%;
+    height: 100vh ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(128px);
+    
 
 }
 
-/* .img-2{
-    width: 300px ;
-} */
+img.tshirt{
+    position: absolute;
+    mix-blend-mode: hue;
+    background-color: rgb(22, 213, 67);
+}
 
-/* .colors{
-    background:red;
-    position:absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 50%;   
-    z-index: 1;
-    mix-blend-mode: multiply;
-    
-} */
 
-/* .color-input{
-    background: #fff;
-    border: 1px #ccc solid;
-} */
+
+
+
+
 
